<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Photos</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync">Sync</string>
    <string name="action_share">Share</string>
    <string name="action_wipe_cache">Wipe Cache</string>
    <string name="title_activity_mode_selection">Browse By:</string>
    <string name="title_activity_photo_list">Photos</string>
    <string name="service_poller_name">mikeandwan.us Poller</string>
    <string name="title_activity_category_list">CategoryList</string>

    <!-- auth -->
    <string name="auth_client_id">maw_photos_android</string>
    <string name="auth_scheme_redirect_uri">us.mikeandwan.photos:/signin-oidc</string>

    <!-- category list item -->
    <string name="li_category_thumbnail_description">Thumbnail</string>

    <!-- login activity -->
    <string name="act_login_bg_description">Bittersweet Berries</string>
    <string name="act_login_prompt_username">Username</string>
    <string name="act_login_prompt_password">Password</string>
    <string name="act_login_action_sign_in">Sign in</string>
    <string name="act_login_action_sign_in_short">Sign in</string>
    <string name="act_login_error_field_required">This field is required</string>

    <!-- add comment dialog -->
    <string name="frg_comment_add_comment">Add Comment</string>

    <!-- rating dialog -->
    <string name="frg_rating_your_rating">Your Rating:</string>
    <string name="frg_rating_avg_rating">Average Rating:</string>

    <!-- main image toolbar -->
    <string name="frg_toolbar_comment">Comment</string>
    <string name="frg_toolbar_exif">Exif Data</string>
    <string name="frg_toolbar_rate">Rate Photo</string>
    <string name="frg_toolbar_rotate_left">Rotate Left</string>
    <string name="frg_toolbar_rotate_right">Rotate Right</string>
    <string name="frg_toolbar_toggle_slideshow">Toggle Slideshow</string>
    <string name="title_activity_initial_load">InitialLoadActivity</string>
</resources>
