<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:mawphotos="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_force_sync"
          android:title="@string/action_sync"
          android:icon="@drawable/ic_sync_white_24dp"
          android:orderInCategory="100"
          android:onClick="onMenuItemForceSync"
          mawphotos:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          android:onClick="onMenuItemSettings"
          mawphotos:showAsAction="never" />

    <item android:id="@+id/action_view_upload_queue"
        android:title="View Upload Queue"
        android:orderInCategory="100"
        android:onClick="onViewUploadQueueClick"
        mawphotos:showAsAction="never" />

    <item android:id="@+id/action_wipe_cache"
          android:title="@string/action_wipe_cache"
          android:orderInCategory="100"
          android:onClick="onWipeCache"
          mawphotos:showAsAction="never" />

    <item android:id="@+id/action_reauthenticate"
          android:title="@string/action_reauthenticate"
          android:orderInCategory="100"
          android:onClick="onReauthenticate"
          mawphotos:showAsAction="never" />
</menu>
