<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@+id/horizontalScrollView"
    android:background="?attr/colorPrimaryDark"
    android:gravity="center_horizontal"
    tools:ignore="Overdraw">

    <ImageButton
        android:id="@+id/commentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:clickable="false"
        android:contentDescription="@string/frg_toolbar_comment"
        android:scaleType="center"
        android:src="@drawable/ic_comment_white_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/exifButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37"
        tools:layout_constraintTop_creator="1" />

    <ImageButton
        android:id="@+id/exifButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@null"
        android:clickable="false"
        android:contentDescription="@string/frg_toolbar_exif"
        android:scaleType="center"
        android:src="@drawable/ic_info_outline_white_24dp"
        app:layout_constraintLeft_toRightOf="@+id/commentButton"
        app:layout_constraintRight_toLeftOf="@+id/ratingButton"
        app:layout_constraintTop_toTopOf="@+id/commentButton"
        tools:layout_constraintTop_creator="1" />

    <ImageButton
        android:id="@+id/ratingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/frg_toolbar_rate"
        android:scaleType="center"
        android:src="@drawable/ic_star_white_24dp"
        app:layout_constraintLeft_toRightOf="@+id/exifButton"
        app:layout_constraintRight_toLeftOf="@+id/rotateLeftButton"
        app:layout_constraintTop_toTopOf="@+id/exifButton"
        tools:layout_constraintTop_creator="1" />

    <ImageButton
        android:id="@+id/rotateLeftButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/frg_toolbar_rotate_left"
        android:scaleType="center"
        android:src="@drawable/ic_rotate_left_white_24dp"
        app:layout_constraintLeft_toRightOf="@+id/ratingButton"
        app:layout_constraintRight_toLeftOf="@+id/rotateRightButton"
        app:layout_constraintTop_toTopOf="@+id/ratingButton"
        tools:layout_constraintTop_creator="1" />

    <ImageButton
        android:id="@+id/rotateRightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/frg_toolbar_rotate_right"
        android:src="@drawable/ic_rotate_right_white_24dp"
        app:layout_constraintLeft_toRightOf="@+id/rotateLeftButton"
        app:layout_constraintRight_toLeftOf="@+id/slideshowButton"
        app:layout_constraintTop_toTopOf="@+id/rotateLeftButton"
        tools:layout_constraintTop_creator="1" />

    <ImageButton
        android:id="@+id/slideshowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/frg_toolbar_toggle_slideshow"
        android:scaleType="center"
        android:src="@drawable/ic_play_arrow_white_24dp"
        app:layout_constraintLeft_toRightOf="@+id/rotateRightButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rotateRightButton"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
