<!--suppress ALL -->
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:adjustViewBounds="true"
        android:clickable="false"
        android:contentDescription="@string/act_login_bg_description"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/banner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginStart="0dp" />

    <!-- style="@android:style/Widget.ProgressBar.Horizontal" -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminate="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="0dp"
        android:layout_height="391dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:hint="@string/act_login_prompt_username"
                android:maxLines="1"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:hint="@string/act_login_prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/act_login_action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/username"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="8dp" />

            <Button
                android:id="@+id/login_button"
                style="?android:textAppearanceSmall"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/act_login_action_sign_in"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/password"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />
        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
